--- a/index.css
+++ b/index.css
@@ -27,7 +27,7 @@
     display: inline;
     position: sticky;
     /*font-family: "Josefin_Sans";
-}
+}*/
 
 #unfinished_business {
     color: #90cc22;
