--- a/index.css
+++ b/index.css
@@ -11,7 +11,7 @@
     color: hsl(273, 100, 81);
     /*border-radius: 5 px;*/
     text-align: center;
-    display: none;
+    /*display: none;*/
     position: relative;
 }
 
