--- a/index.css
+++ b/index.css
@@ -7,13 +7,13 @@
     font-style: normal;
 }*/
 
-* {
+/** {
     color: hsl(273, 100, 81);
-    /*border-radius: 5 px;*/
+    border-radius: 5 px;
     text-align: center;
-    /*display: none;*/
+    display: none;
     position: relative;
-}
+}*/
 
 .section-headers {
     color: rgb(255, 192, 203);
